# Jira-Project

./: .env.example  ARCHITECTURE.md  BACKEND-API.md  CELERY-SYNC-GUIDE.md  CLAUDE.md  DATABASE-SCHEMA.md  DEPLOY-CHECKLIST.md  DESIGN-HANDOFF-Components.md  DESIGN-HANDOFF-README.md  DESIGN-SYSTEM-Guide.md  FULL-TESTING-GUIDE.md  GETTING-STARTED-PHASE-6.md  IMPLEMENTATION-BRIEFING.md  PHASE-6-INFRASTRUCTURE-COMPLETION.md  PRD-Team-Performance-Analytics.md  SYNC-IMPLEMENTATION-SUMMARY.md  TECHNICAL-DOCUMENTATION-INDEX.md  TESTING-STRATEGY.md  docker-compose.yml  start-dev.sh  tailwind.config.js
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  PHASE-5-COMPLETION.md  QUICK-START-CELERY.md  README.md  WEBSOCKET-IMPLEMENTATION.md  WEBSOCKET-QUICK-START.md  alembic.ini  celery_beat.py  celery_worker.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0a7900758164_initial_schema.py
backend/app/: main.py  schemas.py
backend/app/core/: config.py  database.py  logging.py  metrics.py  middleware.py
backend/app/models/: __init__.py  base.py  models.py
backend/app/routers/: auth.py  dashboard.py  developers.py  health.py  jira.py  teams.py
backend/app/services/: __init__.py  auth.py  jira.py  metrics.py
backend/app/tasks/: __init__.py  sync.py
backend/app/websocket/: __init__.py  broadcaster.py  manager.py  router.py
backend/tests/: conftest.py  test_auth.py  test_developers.py  test_health.py  test_metrics_service.py  test_sync.py  test_teams.py  test_websocket.py
frontend/: .dockerignore  (+7 more)
(+69 files in other folders)
