[project]
name = "jira-team-analytics"
version = "0.1.0"
description = "Real-time team performance analytics for Jira"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/main.py", "alembic/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
